<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>net.zaiyers</groupId>
    <artifactId>Channels</artifactId>
    <version>1.5-SNAPSHOT</version>
    <name>Channels</name>
    <description>A multichannel Chatplugin for Velocity</description>

    <repositories>
        <repository>
            <id>velocity-repo</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>minebench-repo</id>
            <url>https://repo.minebench.de/</url>
        </repository>
        <repository>
            <id>luck-repo</id>
            <url>https://repo.lucko.me/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>net.zaiyers</groupId>
            <artifactId>UUIDDB</artifactId>
            <version>1.2-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.velocitypowered</groupId>
            <artifactId>velocity-api</artifactId>
            <version>3.3.0-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.luckperms</groupId>
            <artifactId>api</artifactId>
            <version>5.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>de.themoep</groupId>
            <artifactId>vnpvelocity</artifactId>
            <version>1.3-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>io.github.miniplaceholders</groupId>
            <artifactId>miniplaceholders-api</artifactId>
            <version>2.2.3</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.mongodb</groupId>
            <artifactId>mongodb-driver-sync</artifactId>
            <version>4.9.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>de.themoep</groupId>
            <artifactId>minedown-adventure</artifactId>
            <version>1.7.3-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <build.number>${buildNumber}</build.number>
        <minecraft.plugin.version>${project.version} ${buildDescription}</minecraft.plugin.version>
    </properties>

    <profiles>
        <profile>
            <id>static_build_number</id>
            <activation>
                <property>
                    <name>!env.BUILD_NUMBER</name>
                </property>
            </activation>
            <properties>
                <buildNumber>0</buildNumber>
                <buildDescription>(compiled at ${maven.build.timestamp})</buildDescription>
            </properties>
        </profile>
        <profile>
            <id>dynamic_build_number</id>
            <activation>
                <property>
                    <name>env.BUILD_NUMBER</name>
                </property>
            </activation>
            <properties>
                <buildNumber>${env.BUILD_NUMBER}</buildNumber>
                <buildDescription>(build ${env.BUILD_NUMBER})</buildDescription>
            </properties>
        </profile>
    </profiles>

    <build>
        <finalName>${project.name}</finalName>
        <resources>
            <resource>
                <filtering>true</filtering>
                <directory>${project.basedir}/src/main/resources</directory>
            </resource>
        </resources>

        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <configuration>
                    <relocations>
                        <relocation>
                            <pattern>com.mongodb</pattern>
                            <shadedPattern>net.zaiyers.Channels.lib.mongodb</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>org.bson</pattern>
                            <shadedPattern>net.zaiyers.Channels.lib.bson</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>de.themoep.minedown</pattern>
                            <shadedPattern>net.zaiyers.Channels.lib.minedown</shadedPattern>
                        </relocation>
                    </relocations>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>